# fieldmark

./: .editorconfig  .gitignore  AGENTS.md  CCIMS_Architectural_Constraints.md  CLAUDE.md  FieldMark_Ideation_and_Architecture_History.md  FieldMark_PrePlanning_Plumbing_Checklist.md  HANDOFF.md  LICENSE  Makefile  README.md  docker-compose.yml
fieldmark_py/: .editorconfig  .gitignore  .ruff.toml  CLAUDE.md  README.md  conftest.py  main.py  manage.py  mypy.ini  pyproject.toml  pytest.ini
fieldmark_py/audit/: actions.py  append.py  models.py
fieldmark_py/audit/migrations/: 0001_initial.py
fieldmark_py/audit/tests/: test_action_conformance.py  test_append_audit_entry.py  test_db_rollback.py
fieldmark_py/fieldmark/: asgi.py  authn.py  authz.py  avatar.py  context_processors.py  roles.py  settings.py  urls.py  views.py  wsgi.py
fieldmark_py/fieldmark/templatetags/: avatar_tags.py  compliance_tile_tags.py  component_tags.py
fieldmark_py/fieldmark/tests/: component_fixtures.py  normalize_html.py  test_action_button_template.py  test_audit_row_snapshot.py  test_auth_flow.py  (+15 more)
fieldmark_py/grid/: ssrm.py  test_grid_views.py  tests.py  urls.py  views.py
fieldmark_py/inspections/: apps.py
fieldmark_py/projects/: errors.py  forms.py  models.py  urls.py  views.py
fieldmark_py/reference/: conftest.py  models.py  queries.py  views.py
fieldmark_py/static/: site.webmanifest
fieldmark_py/templates/: _avatar_menu.html  _flash_region.html  _login.html  _theme_toggle.html  base.html
fieldmark_py/tools/: apps.py  models.py
fieldmark_py/violations/: apps.py
(+560 files in other folders)
