[project]
name = "fieldmark-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "psycopg[binary]>=3.3.3",
]

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "django-stubs>=6.0.3",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "ruff>=0.15.12",
]
